	libfreeipmi/include/freeipmi/ipmi-kcs.h: Rename to
	ipmi-kcs-interface.c and ipmi-kcs-interface.h respectively.

	* libfreeipmi/src/ipmi-rmcpplus-debug.c: Rename to
	libfreeipmi/src/ipmi-debug-rmcpplus.c.

	* libfreeipmi/src/ipmi-debug-lan.c,
	libfreeipmi/src/ipmi-debug-rmcp.c,
	libfreeipmi/src/ipmi-debug-common.c,
	libfreeipmi/src/ipmi-debug-common.h: New files, split off from
	ipmi-debug.c.

	* Adjust remaining code and Makefiles for file name changes, new
	files, and removals.

	* Various minor fixes.
		
2007-11-24  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-outofband-hostname-hostranged.man: Fix
	english.
	
2007-11-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-kcs-api.c (_ipmi_kcs_cmd_write),
	libfreeipmi/src/ipmi-ssif-api.c (_ipmi_ssif_cmd_write): Fix error
	handling mem-leak corner case.

	* configure.ac: Prepare for beta release.

	* Tagged Release-0_5_0_beta2.

2007-11-24  Dmitry Frolov <frol@nov.net>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c: Fix FreeBSD
	port compile bug.

2007-11-22  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sdr-cache.c, common/src/ipmi-sdr-cache-reads.c,
	common/src/ipmi-sdr-cache-writes.c: Remove unneeded includes.
	
2007-11-21  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-openipmi-api.c: Adjust INTERNAL errors to
	SYSTEM errors appropriately.

	* libfreeipmi/src/ipmi-ssif-api.c, libfreeipmi/src/ipmi-kcs-api.c:
	General code cleanup/fixes.
	
2007-11-20  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-coding.txt: Fix ipmi-pef typo.
	
2007-11-20  Albert Chu <chu11@llnl.gov>

	* configure.ac: Prepare for beta release.

	* Tagged Release-0_5_0_beta1.

2007-11-20  Dmitry Frolov <frol@nov.net>

	* libfreeipmi/src/ipmi-kcs-api.c (ipmi_kcs_ctx_io_init): Fix
	FreeBSD port bug.
	
2007-11-19  Albert Chu <chu11@llnl.gov>

	AUTHORS: Add Phil Knirsch.

	NEWS: Various tweaks.
	
2007-11-19  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Remove ipmimonitoring subpackage.  Move into
	core package.
