@@ -29,6 +29,7 @@ extern "C" {
 #include <freeipmi/ipmi-authentication-type-spec.h>
 #include <freeipmi/ipmi-channel-spec.h>
 #include <freeipmi/ipmi-cipher-suite-spec.h>
+#include <freeipmi/ipmi-cipher-suite-utils.h>
 #include <freeipmi/ipmi-cmd-spec.h>
 #include <freeipmi/ipmi-comp-code-spec.h>
 #include <freeipmi/ipmi-ipmb-lun-spec.h>
